fix: update project card styles for improved layout and readability

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -538,7 +538,10 @@ body.dark-theme .profile-container h2 {
 }
 
 .project-card {
+  display: grid;
+  place-items: center;
   background-color: rgba(0, 0, 0, 0.05);
+  min-height: 100px;
   border-radius: 8px;
   padding: 15px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -547,7 +550,6 @@ body.dark-theme .profile-container h2 {
 
 .project-card:hover {
   transform: translateY(-5px);
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
 body.dark-theme .project-card {
@@ -559,11 +561,9 @@ body.dark-theme .project-card:hover {
   box-shadow: 0 5px 15px rgba(255, 255, 255, 0.1);
 }
 
-.project-card h4 {
-  margin-top: 0;
-  margin-bottom: 10px;
-  color: var(--primary-color);
-  font-size: 1.1rem;
+.project-card p {
+  font-size: 1.2rem;
+  font-weight: 500;
 }
 
 body.dark-theme .project-card h4 {
